service.yaml
---
### Deploy Service ###
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service
  namespace: argocd
spec:
  selector:
    app: sample-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
