ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gtcluster-ingress
  namespace: gke-ns-gtcluster-eu-west4
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: gtcluster-svc-nodeport
            port: 
              number: 8000
      - path: /run-genotools/
        pathType: ImplementationSpecific
        backend:
          service:
            name: gtcluster-svc-nodeport
            port: 
              number: 8000
